--- a/login.css
+++ b/login.css
@@ -84,6 +84,7 @@ span:hover{
     height: 100%;
     width: 80%;
     display: flex;
+    flex-direction: column;
     justify-content: center;  
 }
 .links{
@@ -92,6 +93,7 @@ span:hover{
 }
 a{
     color:#68519d;
+    text-align: center;
 }
 .spaceInput{
     width: 100%;
@@ -212,20 +214,33 @@ p{
     
 } */
 
-.invalid{
+.invalid1{
     color: red;
     display: none;
     text-align: center;
-    margin-left: 5%;
-    margin-right: 5%;
+    font-size: 12px;
+}
+.invalid2{
+    color: red;
+    display: none;
+    text-align: center;
+    font-size: 12px;
+}
+.invalid3{
+    color: red;
+    display: none;
+    text-align: center;
+    font-size: 12px;
+}
+.valid{
+    color: green;
+    text-align: center;
+    font-size: 12px;
 }
 
-.validCamps{
-    color: green;
-    display: block;
+.invalid4{
+    color: red;
+    display: none;
     text-align: center;
-}
-.invalidActive{
-    display: block;
-    color:red;
+    font-size: 12px;
 }
